<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/anime_banner_image_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/anime_banner"
        android:scaleType="centerCrop"
        android:src="@android:drawable/btn_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/thumbnailCardView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="-75dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/anime_banner_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anime_banner_image_view">

        <ImageView
            android:id="@+id/anime_thumbnail_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/anime_thumbnail"
            android:scaleType="centerCrop"
            android:src="@android:drawable/btn_default" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/anime_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/anime_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/thumbnailCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/thumbnailCardView"
        app:layout_constraintTop_toTopOf="@id/thumbnailCardView" />

    <TextView
        android:id="@+id/anime_description_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbnailCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>